# Ensemble-Classifier

./: CMakeLists.txt  Readme.md  makefile
.github/workflows/: ci.yml
include/: ensemble_classifier.h  headers.hpp  linear_classifier.h  utils.h  voter.h
src/: EnsembleClassifier.cpp  LinearClassifier.cpp  Voter.cpp  ensemble_classifier.cpp  linear_classifier.cpp  utils.cpp  voter.cpp
src/ensemble/: ensemble_classifier.cpp  main.cpp
src/linear/: linear_classifier.cpp  main.cpp
src/utils/: utils.cpp
src/voter/: main.cpp  voter.cpp
